fixing nav on mobile

--- a/app/assets/stylesheets/basscss.css
+++ b/app/assets/stylesheets/basscss.css
@@ -702,6 +702,7 @@ hr {
 }
 
 .container {
+  width: 95%;
   max-width: 64em;
   margin-left: auto;
   margin-right: auto;
